2008-11-18  Dan Fandrich <dan@coneharvesters.com>

	* libexif/exif-entry.c & configure.ac: use localtime_r when available
	  to make libexif thread safe
	* po/nl.po: Updated Dutch translation by Erwin Poeze
	* po/pl.po: Updated Polish translation by Jakub Bogusz
	* contrib/examples/*: Added a couple of simple example programs
	  to show how to use libexif. One was written by Naysawn Naderi
	  and the other one I wrote. Closes bug #1246824.

2008-11-06  Dan Fandrich <dan@coneharvesters.com>

	* Released 0.6.17

2008-11-05  Dan Fandrich <dan@coneharvesters.com>

	* aolserver/*: moved to contrib/aolserver/
	* README: updated
	* po/de.po: Updated German translation by Marcus Meissner
	* Added contrib/watcom/ directory to the source tarball now that
	  Jan Patera brought it up-to-date.
	* libexif.spec.in: changed default release number to 1; added NEWS,
	  AUTHORS and COPYING files to package; moved libexif.so file to -devel
	  package; corrected license to LGPL

2008-10-20  Jan Patera <patera@users.sourceforge.net>

	* libexif/pentax/mnote-pentax-tag.c & olympus/mnote-olympus-tag.c:
	  Don't crash in mnote_XX_tag_get_description on unknown tags

2008-10-04  Jan Patera <patera@users.sourceforge.net>

	* libexif/canon/mnote-canon-entry.c: fixed interpretation
	  of Auto ISO and Self-Timer entries

2008-10-08  Aric Blumer <aricblumer@users.sourceforge.net>

	* libexif/exif-tag.c: GPS tags EXIF_TAG_GPS_IMG_DIRECTION_REF
	  and EXIF_TAG_GPS_IMG_DIRECTION are now recognized

2008-10-04  Jan Patera <patera@users.sourceforge.net>

	* libexif/olympus/exif-mnote-data-olympus.c: bug #2071600,
	  gnome Bug #549029: Original v1 Nikon makernotes
	  are always parsed using MM order, regardless of
	  main EXIF data word order.

2008-10-04  Louis Strous <louis_strous@users.sourceforge.net>

	* libexif/exif-loader.c: DHT & DQT markers are now properly
	  skipped when searching for APP1 marker in JPEG stream.
	  Apparently such files are created by Gisteq PhotoTrackr SW