@@ -1,5 +1,7 @@
-/* exif-content.h
- *
+/*! \file exif-content.h
+ *  \brief Handling EXIF IFDs
+ */
+/*
  * Copyright (c) 2001 Lutz Mueller <lutz@users.sourceforge.net>
  *
  * This library is free software; you can redistribute it and/or
@@ -25,6 +27,7 @@
 extern "C" {
 #endif /* __cplusplus */
 
+/*! Holds all EXIF tags in a single IFD */
 typedef struct _ExifContent        ExifContent;
 typedef struct _ExifContentPrivate ExifContentPrivate;
 
@@ -52,23 +55,67 @@ void         exif_content_ref     (ExifContent *content);
 void         exif_content_unref   (ExifContent *content);
 void         exif_content_free    (ExifContent *content);
 
-void         exif_content_add_entry    (ExifContent *, ExifEntry *);
-void         exif_content_remove_entry (ExifContent *, ExifEntry *);
-ExifEntry   *exif_content_get_entry    (ExifContent *, ExifTag);
+/*! Add an EXIF tag to an IFD.
+ * If this tag already exists in the IFD, this function does nothing.
+ * \param[out] c IFD
+ * \param[in] entry EXIF entry to add
+ */
+void         exif_content_add_entry    (ExifContent *c, ExifEntry *entry);
+
+/*! Remove an EXIF tag from an IFD.
+ * If this tag does not exist in the IFD, this function does nothing.
+ * \param[out] c IFD
+ * \param[in] e EXIF entry to remove
+ */
+void         exif_content_remove_entry (ExifContent *c, ExifEntry *e);
+
+/*! Return the #ExifEntry in this IFD corresponding to the given tag.
+ * \param[in] content EXIF content for an IFD
+ * \param[in] tag EXIF tag to return
+ * \return #ExifEntry of the tag, or NULL on error
+ */
+ExifEntry   *exif_content_get_entry    (ExifContent *content, ExifTag tag);
 void         exif_content_fix          (ExifContent *);
 
 typedef void (* ExifContentForeachEntryFunc) (ExifEntry *, void *user_data);
+
+/*! Executes function on each EXIF tag in turn.
+ * \param[in] content IFD over which to iterate
+ * \param[in] func function to call for each entry
+ * \param[in] user_data data to pass into func on each call
+ */
 void         exif_content_foreach_entry (ExifContent *content,
 					 ExifContentForeachEntryFunc func,
 					 void *user_data);
 
-/* For your convenience */
-ExifIfd exif_content_get_ifd (ExifContent *);
+/*! Returns the IFD number in which the given #ExifContent is found.
+ * \param[in] c an #ExifContent*
+ * \return IFD number, or EXIF_IFD_COUNT on error
+ */
+ExifIfd exif_content_get_ifd (ExifContent *c);
+
+/*! Returns a textual representation of the EXIF data for a tag.
+ * \param[in] c #ExifContent for an IFD
+ * \param[in] t #ExifTag to return
+ * \param[out] v buffer in which to store value
+ * \param[in] m length of the buffer v
+ * \return v pointer, or NULL on error
+ */
 #define exif_content_get_value(c,t,v,m)					\
 	(exif_content_get_entry (c,t) ?					\
 	 exif_entry_get_value (exif_content_get_entry (c,t),v,m) : NULL)
 
+/*! Dump contents of the IFD to stdout.
+ * This is intended for diagnostic purposes only.
+ * \param[in] content IFD data
+ * \param[in] indent how many levels deep to indent the data
+ */
 void exif_content_dump  (ExifContent *content, unsigned int indent);
+
+/*! Set the log message object for this IFD.
+ * \param[in] content IFD
+ * \param[in] log #ExifLog
+ */
 void exif_content_log   (ExifContent *content, ExifLog *log);
 
 #ifdef __cplusplus
