@@ -31,38 +31,42 @@
 extern "C" {
 #endif /* __cplusplus */
 
+/*! Data used by the loader interface */
 typedef struct _ExifLoader ExifLoader;
 
-/*! Allocate a new ExifLoader
- *  \returns the allocated ExifLoader
+/*! Allocate a new #ExifLoader
+ *  \return allocated ExifLoader
  */
 ExifLoader *exif_loader_new     (void);
-/*! Allocate a new ExifLoader using an ExifMem
+
+/*! Allocate a new #ExifLoader using an #ExifMem
  *  \param[in] mem the ExifMem
- *  \returns the allocated ExifLoader
+ *  \return allocated ExifLoader
  */
 ExifLoader *exif_loader_new_mem (ExifMem *mem);
-/*! Increase the refcount of the ExifLoader
+
+/*! Increase the refcount of the #ExifLoader
  *  \param[in] loader the ExifLoader to increase the refcount of.
  */
 void        exif_loader_ref     (ExifLoader *loader);
-/*! Decrease the refcount of the ExifLoader
- *  \param[in] loader the ExifLoader to decrease the refcount of.
- *  If the refcount reaches 0, the ExifLoader is freeed.
+
+/*! Decrease the refcount of the #ExifLoader
+ *  \param[in] loader ExifLoader to decrease the refcount of.
+ *  If the refcount reaches 0, the ExifLoader is freed.
  */
 void        exif_loader_unref   (ExifLoader *loader);
 
-/*! Write a file to the ExifLoader
- * \param[in] loader the loader
- * \param[in] fname the path to the file to read
+/*! Write a file into the #ExifLoader from the filesystem.
+ * \param[in] loader loader
+ * \param[in] fname path to the file to read
  */
 void        exif_loader_write_file (ExifLoader *loader, const char *fname);
 
-/*! Write a buffer to the ExifLoader
- * \param[in] loader the loader to write too
- * \param[in] buf the buffer to read from
- * \param[in] sz the size of the buffer
- * \returns 1 while EXIF data is read (or while there is still hope that there will be EXIF data later on), 0 otherwise.
+/*! Write a buffer into the ExifLoader from a memory block.
+ * \param[in] loader loader to write to
+ * \param[in] buf buffer to read from
+ * \param[in] sz size of the buffer
+ * \return 1 while EXIF data is read (or while there is still hope that there will be EXIF data later on), 0 otherwise.
  */
 unsigned char exif_loader_write (ExifLoader *loader, unsigned char *buf, unsigned int sz);
 
@@ -70,9 +74,10 @@ unsigned char exif_loader_write (ExifLoader *loader, unsigned char *buf, unsigne
  * \param[in] loader the loader
  */
 void          exif_loader_reset (ExifLoader *loader);
+
 /*! Get an ExifData out of an ExifLoader
  * \param[in] loader the loader
- * \returns and allocated ExifData
+ * \return allocated ExifData
  */
 ExifData     *exif_loader_get_data (ExifLoader *loader);
 
